--- a/app/src/main/res/layout/guild_detail_activity.xml
+++ b/app/src/main/res/layout/guild_detail_activity.xml
@@ -9,9 +9,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/shape"
+        style="@style/Header"
         android:layout_width="0dp"
         android:layout_height="110dp"/>
+
+    <ImageView
+        android:id="@+id/iv_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/BackButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="20dp"
+        android:contentDescription="@string/back_button" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_container"
@@ -25,35 +35,26 @@
         tools:visibility="visible">
 
         <ImageView
-            android:id="@+id/iv_back"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="20dp"/>
-
-        <ImageView
             android:id="@+id/iv_emblem_fg"
             android:src="@mipmap/ic_launcher_round"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="75dp"
             android:layout_marginStart="25dp"
             android:layout_width="175dp"
             android:layout_height="175dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_back"
+            app:layout_constraintTop_toTopOf="parent"
             android:elevation="1dp"
             android:contentDescription="@string/emblem_foreground"/>
 
         <ImageView
             android:id="@+id/iv_emblem_bg"
             android:src="@mipmap/ic_launcher_round"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="75dp"
             android:layout_marginStart="25dp"
             android:layout_width="175dp"
             android:layout_height="175dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_back"
+            app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/emblem_background"/>
 
 
@@ -97,7 +98,7 @@
 
         <TextView
             android:id="@+id/tv_member_list"
-            android:text="Members"
+            android:text="@string/members"
             android:textSize="16sp"
             android:layout_marginStart="20dp"
             style="@style/primaryTextStyle"
@@ -109,7 +110,7 @@
 
         <TextView
             android:id="@+id/tv_member_see_all"
-            style="@style/primaryTextStyle"
+            style="@style/SeeAllButton"
             android:text="@string/see_all"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_guild_motd"
@@ -120,7 +121,6 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/shape_rounded_border"
             android:paddingStart="7dp"
-            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
             tools:ignore="RtlSymmetry"
             android:layout_marginTop="5dp" />
 
