--- a/app/src/main/res/layout/wb_detail_recycler_item.xml
+++ b/app/src/main/res/layout/wb_detail_recycler_item.xml
@@ -6,7 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="10dp"
     android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    app:cardBackgroundColor="@color/material_on_surface_stroke"
+    android:background="@color/material_on_surface_stroke"
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
