--- a/app/src/main/res/layout/activity_daily_detail.xml
+++ b/app/src/main/res/layout/activity_daily_detail.xml
@@ -14,7 +14,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape"
+            android:background="@drawable/gradient_night_mode"
             app:layout_scrollFlags="enterAlways|scroll|snap">
 
             <View
