--- a/app/src/main/res/layout/activity_guild_member.xml
+++ b/app/src/main/res/layout/activity_guild_member.xml
@@ -10,7 +10,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/shape"
+        style="@style/Header"
         android:layout_width="0dp"
         android:layout_height="110dp"/>
 
@@ -18,7 +18,7 @@
         android:id="@+id/iv_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_baseline_arrow_back_24"
+        style="@style/BackButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_margin="20dp"
