--- a/app/src/main/res/layout/character_fragment.xml
+++ b/app/src/main/res/layout/character_fragment.xml
@@ -10,7 +10,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/shape"
+        style="@style/Header"
         android:layout_width="0dp"
         android:layout_height="110dp"/>
 
