--- a/app/src/main/res/layout/guild_fragment.xml
+++ b/app/src/main/res/layout/guild_fragment.xml
@@ -11,13 +11,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/shape"
+        style="@style/Header"
         android:layout_width="0dp"
         android:layout_height="110dp"/>
 
     <TextView
         android:id="@+id/tv_character_title"
-        android:text="Guild List"
+        android:text="@string/guild_list"
         style="@style/primaryTextStyle"
         android:textSize="25sp"
         android:layout_width="wrap_content"
