--- a/app/src/main/res/layout/guild_member_recycler_item.xml
+++ b/app/src/main/res/layout/guild_member_recycler_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingBottom="10dp"
     android:paddingTop="10dp">
 
@@ -22,11 +22,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:background="@drawable/gradient">
+            style="@style/HorizontalGradient">
 
             <TextView
                 android:id="@+id/tv_member_name"
-                android:text="Adoot"
+                tools:text="Adoot"
                 style="@style/primaryTextStyle"
                 android:textSize="20sp"
                 android:layout_width="wrap_content"
