--- a/app/src/main/res/layout/wb_detail_activity.xml
+++ b/app/src/main/res/layout/wb_detail_activity.xml
@@ -8,12 +8,13 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:elevation="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape"
+            style="@style/Header"
             app:layout_scrollFlags="enterAlways|scroll|snap">
 
             <View
@@ -26,7 +27,7 @@
 
             <ImageView
                 android:id="@+id/iv_back"
-                android:src="@drawable/ic_baseline_arrow_back_24"
+                style="@style/BackButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="40dp"
