--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,8 +14,32 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="Header" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:background">@drawable/gradient_night_mode</item>
+    </style>
+
+    <style name="HorizontalGradient" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:background">@drawable/gradient_night_horizontal</item>
+    </style>
+
+    <style name="BackButton" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:src">@drawable/ic_baseline_arrow_back_24</item>
+    </style>
+
+    <style name="LogoutButton" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:src">@drawable/ic_baseline_login_24</item>
+    </style>
+
+    <style name="RecyclerExpandableDownArrow" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:src">@drawable/ic_baseline_keyboard_arrow_down_24_black</item>
+    </style>
+
     <style name="primaryTextStyle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="SeeAllButton" parent="primaryTextStyle">
+        <item name="android:drawableEnd">@drawable/ic_baseline_keyboard_arrow_right_24</item>
     </style>
 
 </resources>
