--- a/app/src/main/res/layout/daily_achievements_recycler_item.xml
+++ b/app/src/main/res/layout/daily_achievements_recycler_item.xml
@@ -25,6 +25,14 @@
             android:layout_height="25dp"
             android:layout_alignParentEnd="true" />
 
+        <ImageView
+            android:id="@+id/iv_arrow_up"
+            style="@style/RecyclerExpandableUpArrow"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"/>
+
         <RelativeLayout
             android:id="@+id/rl_expandable"
             android:layout_width="match_parent"
