--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -44,7 +44,7 @@
 
                 <TextView
                     android:id="@+id/tv_acc_name"
-                    android:text="Sleeptide"
+                    tools:text="Sleeptide"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:theme="@style/primaryTextStyle"
@@ -54,7 +54,7 @@
 
                 <TextView
                     android:id="@+id/tv_gold"
-                    android:text="20"
+                    tools:text="20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:theme="@style/primaryTextStyle"
@@ -73,7 +73,7 @@
 
                 <TextView
                     android:id="@+id/tv_silver"
-                    android:text="20"
+                    tools:text="20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:theme="@style/primaryTextStyle"
@@ -91,7 +91,7 @@
 
                 <TextView
                     android:id="@+id/tv_copper"
-                    android:text="20"
+                    tools:text="20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:theme="@style/primaryTextStyle"
@@ -109,7 +109,7 @@
 
                 <TextView
                     android:id="@+id/tv_gem"
-                    android:text="10"
+                    tools:text="10"
                     android:theme="@style/primaryTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -126,7 +126,7 @@
 
                 <TextView
                     android:id="@+id/tv_karma"
-                    android:text="10"
+                    tools:text="10"
                     android:theme="@style/primaryTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
