--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -31,7 +31,11 @@
     </style>
 
     <style name="RecyclerExpandableDownArrow" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:src">@drawable/ic_baseline_keyboard_arrow_down_24_black</item>
+        <item name="android:src">@drawable/ic_baseline_keyboard_arrow_down_24</item>
+    </style>
+
+    <style name="RecyclerExpandableUpArrow" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:src">@drawable/ic_baseline_keyboard_arrow_up_24</item>
     </style>
 
     <style name="primaryTextStyle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
