--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,6 +34,10 @@
         <item name="android:src">@drawable/ic_baseline_keyboard_arrow_down_24_black</item>
     </style>
 
+    <style name="RecyclerExpandableUpArrow" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:src">@drawable/ic_baseline_keyboard_arrow_up_24_black</item>
+    </style>
+
     <style name="primaryTextStyle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:textColor">@color/black</item>
     </style>
